# RenderHelp

./: .gitignore  CMakeLists.txt  Model.h  README.md  RenderHelp.h  sample_01_triangle.cpp  sample_02_texture.cpp  sample_03_box.cpp  sample_04_gouraud.cpp  sample_05_model.cpp  sample_06_normal.cpp  sample_07_specular.cpp
