cmake_minimum_required(VERSION 3.1.3)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project (RenderHelp VERSION 1.0.0)

file(GLOB SAMPLE_HEAD_FILE ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB SAMPLE_SOURCE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

foreach(SAMPLE_MAIN_FILE IN LISTS SAMPLE_SOURCE_FILE)
    get_filename_component(SAMPLE_NAME ${SAMPLE_MAIN_FILE} NAME_WE)
    add_executable(${SAMPLE_NAME} ${SAMPLE_MAIN_FILE} ${SAMPLE_HEAD_FILE})
endforeach()
